Enhance SubdivisionPerformanceBenchmark with code review improvements
- Extract magic numbers to constants

- Add comprehensive Javadoc with JVM warmup and GC guidance

- Improve subdivision wait handling with strict mode validation

- Add waitForLevelSubdivision() for multi-tree coordination

- Add memory usage benchmark comparing tetrahedral vs octant

- Add strict mode assertions to validate performance targets

References: Luciferase-0gpf